--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Contact Muriel Sánchez Laguna - Muri</title>
+    <meta
+      name="description"
+      content="Get in touch with Muriel Sánchez Laguna for collaboration, project inquiries, or professional opportunities. Connect with an experienced engineer and front-end developer dedicated to delivering exceptional results."
+    />
 
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
@@ -35,7 +39,7 @@
     <div class="w-100">
       <nav class="fixed-top navbar navbar-expand bg-body-tertiary">
         <div class="container-fluid">
-          <a class="navbar-brand" href="#"
+          <a class="navbar-brand" href="#" title="Top page"
             ><img
               src="/images/Designer.png"
               alt="Muri logo"
@@ -58,18 +62,31 @@
           <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
               <li class="nav-item">
-                <a class="nav-link" aria-current="page" href="/index.html"
+                <a
+                  class="nav-link"
+                  aria-current="page"
+                  href="/index.html"
+                  title="Home page"
                   >Home</a
                 >
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="/about.html">About</a>
+                <a class="nav-link" href="/about.html" title="About page"
+                  >About</a
+                >
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="/myprojects.html">Work</a>
+                <a
+                  class="nav-link"
+                  href="/myprojects.html"
+                  title="My projects page"
+                  >Work</a
+                >
               </li>
               <li class="nav-item">
-                <a class="nav-link active" href="/">Contact</a>
+                <a class="nav-link active" href="/" title="Contact page"
+                  >Contact</a
+                >
               </li>
             </ul>
           </div>
@@ -85,7 +102,10 @@
               <p>
                 <i class="fa-regular fa-envelope"></i> Email<br />
                 <span
-                  ><a href="mailto:mcsanchezlaguna@gmail.com" target="_blank"
+                  ><a
+                    href="mailto:mcsanchezlaguna@gmail.com"
+                    title="email to: mcsanchezlaguna@gmail.com"
+                    target="_blank"
                     >mcsanchezlaguna@gmail.com</a
                   ></span
                 >
@@ -106,6 +126,7 @@
                 <span>
                   <a
                     href="https://www.linkedin.com/in/murielsanchezlaguna/"
+                    title="Muriel's Linkedin profile"
                     target="_blank"
                     >Muriel Cristina Sánchez Laguna</a
                   ></span
@@ -118,6 +139,7 @@
                 <span
                   ><a
                     href="https://www.instagram.com/muricristinapty/"
+                    title="Muriel's Instagram profile"
                     target="_blank"
                     >@murielcristinapty</a
                   ></span
@@ -134,6 +156,7 @@
             <a
               href="https://github.com/MurielCristina?tab=overview&from=2024-07-01&to=2024-07-23"
               target="_blank"
+              title="GitHub of Muri"
               ><i class="fa-brands fa-github"></i><br />GitHub</a
             >
           </div>
@@ -141,6 +164,7 @@
             <a
               href="https://app.netlify.com/teams/murielcristina/sites"
               target="_blank"
+              title="Netlify of Muri"
               ><i class="fa-solid fa-globe"></i><br />Netlify</a
             >
           </div>
@@ -148,6 +172,7 @@
             <a
               href="https://www.shecodes.io/graduates/135313-muriel-cristina-sanchez-laguna"
               target="_blank"
+              title="SheCodes profile of Muri"
               ><i class="fa-solid fa-school"></i><br />SheCodes</a
             >
           </div>
@@ -155,7 +180,12 @@
         <p class="mb-0 pb-5">
           This page was coded by
 
-          <a href="https://github.com/MurielCristina" target="_blank"> Muri </a
+          <a
+            href="https://muri-portfolio.netlify.app/"
+            target="_blank"
+            title="Portfolio of Muri"
+          >
+            Muri </a
           ><img
             src="/images/Designer.png"
             alt="Muri logo"
@@ -166,12 +196,14 @@
           <a
             href="https://github.com/MurielCristina/Personal-Portfolio"
             target="_blank"
+            title="project open sources at a Github page"
             >open sourced at GitHub</a
           >
           and is hosted at
           <a
             href="https://app.netlify.com/sites/muri-portfolio/overview"
             target="_blank"
+            title="project hosted at Netlify"
             >Netlify</a
           >
         </p>
