--- a/about.html
+++ b/about.html
@@ -3,7 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>About Muriel Sánchez Laguna - Muri</title>
+    <meta
+      name="description"
+      content="Learn more about Muriel Sánchez Laguna, an electromechanical engineer with a master's degree in project management and a passion for front-end development. Discover her professional journey, skills, and dedication to creating innovative solutions."
+    />
 
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
@@ -35,7 +39,7 @@
     <div class="w-100">
       <nav class="fixed-top navbar navbar-expand bg-body-tertiary">
         <div class="container-fluid">
-          <a class="navbar-brand" href="#"
+          <a class="navbar-brand" href="#" title="Top page"
             ><img
               src="/images/Designer.png"
               alt="Muri logo"
@@ -58,18 +62,29 @@
           <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
               <li class="nav-item">
-                <a class="nav-link" aria-current="page" href="/index.html"
+                <a
+                  class="nav-link"
+                  aria-current="page"
+                  href="/index.html"
+                  title="Home page"
                   >Home</a
                 >
               </li>
               <li class="nav-item">
-                <a class="nav-link active" href="/">About</a>
+                <a class="nav-link active" href="/" title="About page">About</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="/myprojects.html">Work</a>
+                <a
+                  class="nav-link"
+                  href="/myprojects.html"
+                  title="My projects page"
+                  >Work</a
+                >
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="/contact.html">Contact</a>
+                <a class="nav-link" href="/contact.html" title="Contact page"
+                  >Contact</a
+                >
               </li>
             </ul>
           </div>
@@ -103,11 +118,24 @@
               </p>
             </div>
             <div>
-              <a href="/contact.html#contact-me" class="btn primary-button"
+              <a
+                href="/contact.html#contact-me"
+                title="Contact me page"
+                class="btn primary-button"
                 >CONTACT ME</a
               >
-              <a href="#" class="btn secondary-button">CV<br />Español</a>
-              <a href="#" class="btn secondary-button">CV<br />English</a>
+              <a
+                href="#"
+                title="SOON! - Download Muriel CV in spanish"
+                class="btn secondary-button"
+                >CV<br />Español</a
+              >
+              <a
+                href="#"
+                title="SOON! - Download Muriel CV in english"
+                class="btn secondary-button"
+                >CV<br />English</a
+              >
             </div>
           </div>
         </div>
@@ -134,6 +162,7 @@
             <a
               href="https://github.com/MurielCristina?tab=overview&from=2024-07-01&to=2024-07-23"
               target="_blank"
+              title="GitHub of Muri"
               ><i class="fa-brands fa-github"></i><br />GitHub</a
             >
           </div>
@@ -141,6 +170,7 @@
             <a
               href="https://app.netlify.com/teams/murielcristina/sites"
               target="_blank"
+              title="Netlify of Muri"
               ><i class="fa-solid fa-globe"></i><br />Netlify</a
             >
           </div>
@@ -148,6 +178,7 @@
             <a
               href="https://www.shecodes.io/graduates/135313-muriel-cristina-sanchez-laguna"
               target="_blank"
+              title="SheCodes profile of Muri"
               ><i class="fa-solid fa-school"></i><br />SheCodes</a
             >
           </div>
@@ -155,7 +186,12 @@
         <p class="mb-0 pb-5">
           This page was coded by
 
-          <a href="https://github.com/MurielCristina" target="_blank"> Muri </a
+          <a
+            href="https://muri-portfolio.netlify.app/"
+            target="_blank"
+            title="Portfolio of Muri"
+          >
+            Muri </a
           ><img
             src="/images/Designer.png"
             alt="Muri logo"
@@ -166,12 +202,14 @@
           <a
             href="https://github.com/MurielCristina/Personal-Portfolio"
             target="_blank"
+            title="project open sources at a Github page"
             >open sourced at GitHub</a
           >
           and is hosted at
           <a
             href="https://app.netlify.com/sites/muri-portfolio/overview"
             target="_blank"
+            title="project hosted at Netlify"
             >Netlify</a
           >
         </p>
