--- a/index.html
+++ b/index.html
@@ -3,7 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Front-end developer - Muri</title>
+    <meta
+      name="description"
+      content="Explore the portfolio of Muriel Sánchez Laguna, showcasing expertise in electromechanical engineering, project management, and front-end development. Discover innovative projects, professional achievements, and a dedication to creating seamless user experiences. Based in Europe."
+    />
 
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
@@ -35,7 +39,7 @@
     <div class="w-100">
       <nav class="fixed-top navbar navbar-expand bg-body-tertiary">
         <div class="container-fluid">
-          <a class="navbar-brand" href="#"
+          <a class="navbar-brand" href="#" title="Top page"
             ><img
               src="/images/Designer.png"
               alt="Muri logo"
@@ -58,16 +62,31 @@
           <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="/">Home</a>
+                <a
+                  class="nav-link active"
+                  aria-current="page"
+                  href="/"
+                  title="Home page"
+                  >Home</a
+                >
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="/about.html">About</a>
+                <a class="nav-link" href="/about.html" title="About page"
+                  >About</a
+                >
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="/myprojects.html">Work</a>
+                <a
+                  class="nav-link"
+                  href="/myprojects.html"
+                  title="My projects page"
+                  >Work</a
+                >
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="/contact.html">Contact</a>
+                <a class="nav-link" href="/contact.html" title="Contact page"
+                  >Contact</a
+                >
               </li>
             </ul>
           </div>
@@ -77,7 +96,10 @@
         <h3>👋🏽 Hello, I am</h3>
         <h1>Muriel<br /><small>Sánchez Laguna</small></h1>
         <h2>🇵🇦 Front-end developer based in Europe</h2>
-        <a href="/contact.html#contact-me" class="btn primary-button"
+        <a
+          href="/contact.html#contact-me"
+          title="Contact me page"
+          class="btn primary-button"
           >CONTACT ME</a
         >
       </section>
@@ -114,7 +136,9 @@
                 user-friendly features and an intuitive design that makes meal
                 planning a breeze.
               </p>
-              <a href="/myprojects.html#best-project1">Learn more →</a>
+              <a href="/myprojects.html#best-project1" title="My projects page"
+                >Learn more →</a
+              >
             </div>
           </div>
 
@@ -129,7 +153,9 @@
                 navigation, managing different time zones has never been
                 simpler.
               </p>
-              <a href="/myprojects.html#best-project2">Learn more →</a>
+              <a href="/myprojects.html#best-project2" title="My projects page"
+                >Learn more →</a
+              >
             </div>
             <div
               class="col-sm-6"
@@ -172,7 +198,9 @@
                 updates, and extended forecasts is quick and easy, ensuring
                 you're always prepared for whatever Mother Nature has in store.
               </p>
-              <a href="/myprojects.html#best-project3">Learn more →</a>
+              <a href="/myprojects.html#best-project3" title="My projects page"
+                >Learn more →</a
+              >
             </div>
           </div>
         </div>
@@ -183,6 +211,7 @@
             <a
               href="https://github.com/MurielCristina?tab=overview&from=2024-07-01&to=2024-07-23"
               target="_blank"
+              title="GitHub of Muri"
               ><i class="fa-brands fa-github"></i><br />GitHub</a
             >
           </div>
@@ -190,6 +219,7 @@
             <a
               href="https://app.netlify.com/teams/murielcristina/sites"
               target="_blank"
+              title="Netlify of Muri"
               ><i class="fa-solid fa-globe"></i><br />Netlify</a
             >
           </div>
@@ -197,6 +227,7 @@
             <a
               href="https://www.shecodes.io/graduates/135313-muriel-cristina-sanchez-laguna"
               target="_blank"
+              title="SheCodes profile of Muri"
               ><i class="fa-solid fa-school"></i><br />SheCodes</a
             >
           </div>
@@ -204,7 +235,12 @@
         <p class="mb-0 pb-5">
           This page was coded by
 
-          <a href="https://github.com/MurielCristina" target="_blank"> Muri </a
+          <a
+            href="https://muri-portfolio.netlify.app/"
+            target="_blank"
+            title="Portfolio of Muri"
+          >
+            Muri </a
           ><img
             src="/images/Designer.png"
             alt="Muri logo"
@@ -215,12 +251,14 @@
           <a
             href="https://github.com/MurielCristina/Personal-Portfolio"
             target="_blank"
+            title="project open sources at a Github page"
             >open sourced at GitHub</a
           >
           and is hosted at
           <a
             href="https://app.netlify.com/sites/muri-portfolio/overview"
             target="_blank"
+            title="project hosted at Netlify"
             >Netlify</a
           >
         </p>
