--- a/myprojects.html
+++ b/myprojects.html
@@ -3,7 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Projects of Muriel Sánchez Laguna - Muri</title>
+    <meta
+      name="description"
+      content="Explore the diverse projects of Muriel Sánchez Laguna, showcasing her expertise in engineering, project management, and front-end development. Discover innovative solutions and creative problem-solving through her featured work."
+    />
 
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
@@ -35,7 +39,7 @@
     <div class="w-100">
       <nav class="fixed-top navbar navbar-expand bg-body-tertiary">
         <div class="container-fluid">
-          <a class="navbar-brand" href="#"
+          <a class="navbar-brand" href="#" title="Top page"
             ><img
               src="/images/Designer.png"
               alt="Muri logo"
@@ -58,18 +62,28 @@
           <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
               <li class="nav-item">
-                <a class="nav-link" aria-current="page" href="/index.html"
+                <a
+                  class="nav-link"
+                  aria-current="page"
+                  href="/index.html"
+                  title="Home page"
                   >Home</a
                 >
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="/about.html">About</a>
+                <a class="nav-link" href="/about.html" title="About page"
+                  >About</a
+                >
               </li>
               <li class="nav-item">
-                <a class="nav-link active" href="/">Work</a>
+                <a class="nav-link active" href="/" title="My projects page"
+                  >Work</a
+                >
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="/contact.html">Contact</a>
+                <a class="nav-link" href="/contact.html" title="Contact page"
+                  >Contact</a
+                >
               </li>
             </ul>
           </div>
@@ -80,7 +94,10 @@
         <h3 class="text-start mb-5">
           Discover the projects I've been passionately developing.
         </h3>
-        <a href="/contact.html#contact-me" class="btn primary-button"
+        <a
+          href="/contact.html#contact-me"
+          title="Contact me page"
+          class="btn primary-button"
           >CONTACT ME</a
         >
       </section>
@@ -111,7 +128,10 @@
                 Hosting, API, SEO, Bootstrap, responsive.</small
               >
             </p>
-            <a href="https://muri-portfolio.netlify.app/" target="_blank"
+            <a
+              href="https://muri-portfolio.netlify.app/"
+              title="Muriel Sánchez Laguna Portfolio page"
+              target="_blank"
               >Launch project →</a
             >
           </div>
@@ -143,7 +163,10 @@
                 Hosting, API, AI.</small
               >
             </p>
-            <a href="https://bare-pantry-chef.netlify.app/ " target="_blank"
+            <a
+              href="https://bare-pantry-chef.netlify.app/ "
+              title="AI Bare Pantry Chef 🍽️👩‍🍳 page"
+              target="_blank"
               >Launch project →</a
             >
           </div>
@@ -178,6 +201,7 @@
             <a
               href="https://world-clock-codedbymuri.netlify.app/"
               target="_blank"
+              title="Family World Clock page"
               >Launch project →</a
             >
           </div>
@@ -213,6 +237,7 @@
             <a
               href="https://vanilla-weather-forecast-codedbymuri.netlify.app/"
               target="_blank"
+              title="Weather Forecast page"
               >Launch project →</a
             >
           </div>
@@ -247,6 +272,7 @@
             <a
               href="https://vanilla-weather-seach-codedbymuri.netlify.app/"
               target="_blank"
+              title="Vanilla Weather Search page"
               >Launch project →</a
             >
           </div>
@@ -259,6 +285,7 @@
             <a
               href="https://github.com/MurielCristina?tab=overview&from=2024-07-01&to=2024-07-23"
               target="_blank"
+              title="GitHub of Muri"
               ><i class="fa-brands fa-github"></i><br />GitHub</a
             >
           </div>
@@ -266,6 +293,7 @@
             <a
               href="https://app.netlify.com/teams/murielcristina/sites"
               target="_blank"
+              title="Netlify of Muri"
               ><i class="fa-solid fa-globe"></i><br />Netlify</a
             >
           </div>
@@ -273,6 +301,7 @@
             <a
               href="https://www.shecodes.io/graduates/135313-muriel-cristina-sanchez-laguna"
               target="_blank"
+              title="SheCodes profile of Muri"
               ><i class="fa-solid fa-school"></i><br />SheCodes</a
             >
           </div>
@@ -280,7 +309,12 @@
         <p class="mb-0 pb-5">
           This page was coded by
 
-          <a href="https://github.com/MurielCristina" target="_blank"> Muri </a
+          <a
+            href="https://muri-portfolio.netlify.app/"
+            target="_blank"
+            title="Portfolio of Muri"
+          >
+            Muri </a
           ><img
             src="/images/Designer.png"
             alt="Muri logo"
@@ -291,12 +325,14 @@
           <a
             href="https://github.com/MurielCristina/Personal-Portfolio"
             target="_blank"
+            title="project open sources at a Github page"
             >open sourced at GitHub</a
           >
           and is hosted at
           <a
             href="https://app.netlify.com/sites/muri-portfolio/overview"
             target="_blank"
+            title="project hosted at Netlify"
             >Netlify</a
           >
         </p>
