Update - new project
-Added "Welcome to Panama" project

--- a/index.html
+++ b/index.html
@@ -110,6 +110,7 @@
       </section>
       <main id="featured-project" class="featured-project">
         <div class="container mt-5">
+          <!-- 1. PROYECT DISPLAY - "best-project1" (start)-->
           <div class="row mb-5">
             <div
               class="col-sm-6"
@@ -120,11 +121,29 @@
               "
             >
               <img
-                src="/images/AI Bare Pantry Chef.png"
-                alt="View of 'AI Bare Pantry Chef'"
+                src="/images/snaps of projects/Welcome to Panama.png"
+                alt="View of 'Welcome to Panama'"
                 class="img-fluid rounded p-2 d-none d-sm-block"
               />
             </div>
+            <div class="col-sm-6">
+              <h6 class="mt-3 mb-4">Welcome to Panama</h6>
+              <p>
+                Embark on a virtual journey with "Welcome to Panama," a vibrant
+                web application designed to showcase the beauty and culture of
+                Panama. Discover stunning landscapes, rich history, and travel
+                tips through an engaging and visually appealing interface.
+                Whether you're planning a trip or exploring from afar, this app
+                offers a comprehensive guide to Panama's wonders.
+              </p>
+              <a href="/myprojects.html#best-project1" title="My projects page"
+                >Learn more →</a
+              >
+            </div>
+          </div>
+          <!-- 2. PROYECT DISPLAY - "best-project2" (start)-->
+
+          <div class="row mb-5">
             <div class="col-sm-6">
               <h6 class="mt-3 mb-4">AI Bare Pantry Chef 🍽️👩‍🍳</h6>
               <p>
@@ -135,23 +154,6 @@
                 food waste and hello to culinary creativity! Explore
                 user-friendly features and an intuitive design that makes meal
                 planning a breeze.
-              </p>
-              <a href="/myprojects.html#best-project1" title="My projects page"
-                >Learn more →</a
-              >
-            </div>
-          </div>
-
-          <div class="row mb-5">
-            <div class="col-sm-6">
-              <h6 class="mt-3 mb-4">Family World Clock</h6>
-              <p>
-                Stay connected with family and friends around the globe using
-                the Family World Clock. This web application provides accurate,
-                real-time time zone information, ensuring you never miss a
-                moment with your loved ones. With its sleek design and easy
-                navigation, managing different time zones has never been
-                simpler.
               </p>
               <a href="/myprojects.html#best-project2" title="My projects page"
                 >Learn more →</a
@@ -166,12 +168,13 @@
               "
             >
               <img
-                src="/images/Family World Clock.png"
-                alt="View of 'Family world clock'"
+                src="/images/snaps of projects/AI Bare Pantry Chef.png"
+                alt="View of 'AI Bare Pantry Chef 🍽️👩‍🍳'"
                 class="img-fluid rounded p-2 d-none d-sm-block"
               />
             </div>
           </div>
+          <!-- 3. PROYECT DISPLAY - "best-project3" (start)-->
 
           <div class="row mb-5">
             <div
@@ -183,7 +186,7 @@
               "
             >
               <img
-                src="/images/Weather Forecast.png"
+                src="/images/snaps of projects/Weather Forecast.png"
                 alt="View of 'Weather forecast'"
                 class="img-fluid rounded p-2 d-none d-sm-block"
               />
@@ -203,6 +206,39 @@
               >
             </div>
           </div>
+          <!-- 4. PROYECT DISPLAY - "best-project4" (start)-->
+
+          <div class="row mb-5">
+            <div class="col-sm-6">
+              <h6 class="mt-3 mb-4">Family World Clock</h6>
+              <p>
+                Stay connected with family and friends around the globe using
+                the Family World Clock. This web application provides accurate,
+                real-time time zone information, ensuring you never miss a
+                moment with your loved ones. With its sleek design and easy
+                navigation, managing different time zones has never been
+                simpler.
+              </p>
+              <a href="/myprojects.html#best-project4" title="My projects page"
+                >Learn more →</a
+              >
+            </div>
+            <div
+              class="col-sm-6"
+              style="
+                display: flex;
+                align-items: center;
+                justify-content: center;
+              "
+            >
+              <img
+                src="/images/snaps of projects/Family World Clock.png"
+                alt="View of 'Family world clock'"
+                class="img-fluid rounded p-2 d-none d-sm-block"
+              />
+            </div>
+          </div>
+          <!--End-->
         </div>
       </main>
       <footer>
