--- a/myprojects.html
+++ b/myprojects.html
@@ -102,12 +102,48 @@
         >
       </section>
       <!-- 1. PROYECT DISPLAY (start)-->
+      <div class="projects-display" id="best-project1">
+        <h4 class="text-center">Welcome to Panama</h4>
+        <div class="row">
+          <div class="col-sm-4">
+            <img
+              src="/images/snaps of projects/Welcome to Panama.png"
+              alt="View of 'Welcome to Panama'"
+              class="img-fluid rounded p-2"
+            />
+          </div>
+          <div class="col-sm-8">
+            <p>
+              Embark on a virtual journey with "Welcome to Panama," a vibrant
+              web application designed to showcase the beauty and culture of
+              Panama. Discover stunning landscapes, rich history, and travel
+              tips through an engaging and visually appealing interface. Whether
+              you're planning a trip or exploring from afar, this app offers a
+              comprehensive guide to Panama's wonders.
+              <br />
+              <br />
+              <small
+                >Built with: HTML, CSS, JavaScript, VS Code, Git, GitHub,
+                Hosting, API, SEO, Bootstrap, responsive.</small
+              >
+            </p>
+            <a
+              href="https://travel-to-panama.netlify.app/"
+              title="Welcome to Panama page"
+              target="_blank"
+              >Launch project →</a
+            >
+          </div>
+        </div>
+      </div>
+      <!-- PROYECT DISPLAY (end)-->
+      <!--PROYECT DISPLAY (start)-->
       <div class="projects-display">
         <h4 class="text-center">Muriel Sánchez Laguna Portfolio</h4>
         <div class="row">
           <div class="col-sm-4">
             <img
-              src="/images/MSL portfolio.png"
+              src="/images/snaps of projects/MSL portfolio.png"
               alt="View of 'Muriel Sánchez Laguna Portfolio'"
               class="img-fluid rounded p-2"
             />
@@ -139,12 +175,12 @@
       </div>
       <!-- PROYECT DISPLAY (end)-->
       <!-- PROYECT DISPLAY (start)-->
-      <div class="projects-display" id="best-project1">
+      <div class="projects-display" id="best-project2">
         <h4 class="text-center">AI Bare Pantry Chef 🍽️👩‍🍳</h4>
         <div class="row">
           <div class="col-sm-4">
             <img
-              src="/images/AI Bare Pantry Chef.png"
+              src="/images/snaps of projects/AI Bare Pantry Chef.png"
               alt="View of 'AI Bare Pantry Chef'"
               class="img-fluid rounded p-2"
             />
@@ -179,7 +215,7 @@
         <div class="row">
           <div class="col-sm-4">
             <img
-              src="/images/Family World Clock.png"
+              src="/images/snaps of projects/Family World Clock.png"
               alt="View of 'Family World Clock'"
               class="img-fluid rounded p-2"
             />
@@ -214,7 +250,7 @@
         <div class="row">
           <div class="col-sm-4">
             <img
-              src="/images/Weather Forecast.png"
+              src="/images/snaps of projects/Weather Forecast.png"
               alt="View of 'Weather Forecast'"
               class="img-fluid rounded p-2"
             />
@@ -250,7 +286,7 @@
         <div class="row">
           <div class="col-sm-4">
             <img
-              src="/images/Vanilla Weather Search.png"
+              src="/images/snaps of projects/Vanilla Weather Search.png"
               alt="View of 'Vanilla Weather Search'"
               class="img-fluid rounded p-2"
             />
