Add new project

--- a/myprojects.html
+++ b/myprojects.html
@@ -103,6 +103,42 @@
       </section>
       <!-- 1. PROYECT DISPLAY (start)-->
       <div class="projects-display" id="best-project1">
+        <h4 class="text-center">Dream Travel Destination</h4>
+        <div class="row">
+          <div class="col-sm-4">
+            <img
+              src="/images/snaps of projects/Dream travel destination.png"
+              alt="View of 'Dream travel destination'"
+              class="img-fluid rounded p-2"
+            />
+          </div>
+          <div class="col-sm-8">
+            <p>
+              Immerse yourself in the beauty of the Amalfi Coast with "Dream
+              Travel Destination," a web application created for the 'Dream
+              Travel Destination Challenge' by SheCodes. This project showcases
+              stunning visuals and detailed information about one of the world's
+              most breathtaking locations, while also demonstrating my enhanced
+              coding skills and creativity.
+              <br />
+              <br />
+              <small
+                >Built with: HTML, CSS, JavaScript, VS Code, Git, GitHub,
+                Hosting, SEO, Bootstrap, responsive.</small
+              >
+            </p>
+            <a
+              href="https://the-amalfi-coast.netlify.app/"
+              title="Dream travel destination page"
+              target="_blank"
+              >Launch project →</a
+            >
+          </div>
+        </div>
+      </div>
+      <!-- PROYECT DISPLAY (end)-->
+      <!--PROYECT DISPLAY (start)-->
+      <div class="projects-display" id="best-project1">
         <h4 class="text-center">Welcome to Panama</h4>
         <div class="row">
           <div class="col-sm-4">
@@ -124,7 +160,7 @@
               <br />
               <small
                 >Built with: HTML, CSS, JavaScript, VS Code, Git, GitHub,
-                Hosting, API, SEO, Bootstrap, responsive.</small
+                Hosting, SEO, Bootstrap, responsive.</small
               >
             </p>
             <a
