added java funcionality
-added an alert "this functionality is not ready yet" in the cv-download button

--- a/about.html
+++ b/about.html
@@ -128,12 +128,14 @@
                 href="#"
                 title="SOON! - Download Muriel CV in spanish"
                 class="btn secondary-button"
+                id="cv-esp"
                 >CV<br />Español</a
               >
               <a
                 href="#"
                 title="SOON! - Download Muriel CV in english"
                 class="btn secondary-button"
+                id="cv-eng"
                 >CV<br />English</a
               >
             </div>
@@ -220,5 +222,6 @@
       integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
       crossorigin="anonymous"
     ></script>
+    <script src="./java.js"></script>
   </body>
 </html>
